--- a/beanprocessor/pom.xml
+++ b/beanprocessor/pom.xml
@@ -4,9 +4,54 @@
 	<groupId>com.soletta</groupId>
 	<artifactId>beanprocessor</artifactId>
 	<version>0.1.4-SNAPSHOT</version>
+
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
+
+	<name>Soletta BeanProcessor</name>
+	<description>
+Builds JavaBean boilerplate by generating a superclass. This project does basic property generation, 
+PropertyChangeListener support, and some extensions that have been useful to me. 
+Extensions include generating JAXB annotations for properties, creating guava predicates and extractors, 
+and creating &quot;fluent setters&quot;.
+
+It works with maven 3; simply add beanprocessor as a dependency of the compiler plugin (by adding it within 
+the dependency section of the compiler plugin setup in your build section.
+	</description>
+	<organization>
+		<name>Ross Judson</name>
+	</organization>
+	<url>https://github.com/rossjudson/beanprocessor</url>
+	
+	<issueManagement>
+		<url>https://github.com/rossjudson/beanprocessor/issues</url>
+		<system>GitHub Issues</system>
+	</issueManagement>
+
+	<licenses>
+		<license>
+			<name>Apache License</name>
+			<url>http://www.apache.org/licenses/LICENSE-2.0</url>
+			<distribution>repo</distribution>
+		</license>
+	</licenses>
+
+	<scm>
+		<url>https://github.com/rossjudson/beanprocessor</url>
+		<connection>scm:git:git://github.com/rossjudson/beanprocessor.git</connection>
+		<developerConnection>scm:git:git@github.com:rossjudson/beanprocessor.git</developerConnection>
+	</scm>
+
+	<developers>
+		<developer>
+			<email>rossjudson@gmail.com</email>
+			<name>Ross Judson</name>
+			<url>https://github.com/rossjudson</url>
+			<id>rossjudson</id>
+		</developer>
+	</developers>
+
 	<build>
 		<plugins>
 			<plugin>
@@ -19,6 +64,108 @@
 					<target>1.6</target>
 				</configuration>
 			</plugin>
+			<!-- plugin>
+				<groupId>com.github.github</groupId>
+				<artifactId>downloads-maven-plugin</artifactId>
+				<version>0.4</version>
+				<configuration>
+					<description>Official ${project.name} build of the
+						${project.version} release</description>
+					<override>true</override>
+					<includeAttached>true</includeAttached>
+				</configuration>
+				<executions>
+					<execution>
+						<goals>
+							<goal>upload</goal>
+						</goals>
+						<phase>install</phase>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>com.github.github</groupId>
+				<artifactId>site-maven-plugin</artifactId>
+				<version>0.4</version>
+				<configuration>
+					<message>Building site for ${project.version}</message>
+				</configuration>
+				<executions>
+					<execution>
+						<goals>
+							<goal>site</goal>
+						</goals>
+						<phase>site</phase>
+					</execution>
+				</executions>
+			</plugin-->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-site-plugin</artifactId>
+				<version>3.0</version>
+				<configuration>
+					<reportPlugins>
+						<plugin>
+							<groupId>org.apache.maven.plugins</groupId>
+							<artifactId>maven-project-info-reports-plugin</artifactId>
+							<version>2.2</version>
+							<configuration>
+								<dependencyDetailsEnabled>true</dependencyDetailsEnabled>
+								<dependencyLocationsEnabled>true</dependencyLocationsEnabled>
+							</configuration>
+						</plugin>
+						<plugin>
+							<groupId>org.apache.maven.plugins</groupId>
+							<artifactId>maven-javadoc-plugin</artifactId>
+							<version>2.7</version>
+						</plugin>
+						<plugin>
+							<groupId>org.apache.maven.plugins</groupId>
+							<artifactId>maven-surefire-report-plugin</artifactId>
+							<version>2.6</version>
+						</plugin>
+						<!--plugin>
+							<groupId>org.apache.maven.plugins</groupId>
+							<artifactId>maven-checkstyle-plugin</artifactId>
+							<version>2.6</version>
+						</plugin-->
+					</reportPlugins>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<configuration>
+					<archive>
+						<manifest>
+							<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
+							<addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
+						</manifest>
+					</archive>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<executions>
+					<execution>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-source-plugin</artifactId>
+				<executions>
+					<execution>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 	</build>
 	<reporting>
@@ -30,12 +177,6 @@
 			</plugin>
 		</plugins>
 	</reporting>
-	<name>Soletta BeanProcessor</name>
-	<description>Builds JavaBean boilerplate by generating a superclass. This project does basic property generation, PropertyChangeListener support, and some extensions that have been useful to me. Extensions include generating JAXB annotations for properties, creating guava predicates and extractors, and creating &quot;fluent setters&quot;.
 
-It works with maven 3; simply add beanprocessor as a dependency of the compiler plugin (by adding it within the dependency section of the compiler plugin setup in your build section.</description>
-	<organization>
-		<name>Ross Judson</name>
-	</organization>
 </project>
 
