--- a/beanprocessor-test-beans/pom.xml
+++ b/beanprocessor-test-beans/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.soletta</groupId>
 	<artifactId>beanprocessor-test-beans</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.1.5-SNAPSHOT</version>
 	<name>BeanProcessor :: Test Beans</name>
 	<description>
 	Contains simple bean definitions that will be processed by the BeanProcessor. It's more convenient
@@ -19,7 +19,7 @@
 		<dependency>
 			<groupId>com.soletta</groupId>
 			<artifactId>beanprocessor</artifactId>
-			<version>0.1.4-SNAPSHOT</version>
+			<version>${project.version}</version>
 			<scope>provided</scope>
 		</dependency>
 	</dependencies>
@@ -37,7 +37,7 @@
 					<dependency>
 						<groupId>com.soletta</groupId>
 						<artifactId>beanprocessor</artifactId>
-						<version>0.1.4-SNAPSHOT</version>
+						<version>${project.version}</version>
 					</dependency>
 				</dependencies>
 			</plugin>
