--- a/beanprocessortest/pom.xml
+++ b/beanprocessortest/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.soletta</groupId>
 	<artifactId>beanprocessor-test</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.1.5-SNAPSHOT</version>
 	<name>BeanProcessor :: Test</name>
 	<description>JUnit tests for the BeanProcessor, using the test beans project.</description>
 	<dependencies>
@@ -22,7 +22,7 @@
 		<dependency>
 			<groupId>com.soletta</groupId>
 			<artifactId>beanprocessor</artifactId>
-			<version>0.1.4-SNAPSHOT</version>
+			<version>${project.version}</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
