--- a/beanprocessor-test-beans/pom.xml
+++ b/beanprocessor-test-beans/pom.xml
@@ -14,7 +14,12 @@
 		<dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
-			<version>10.0.1</version>
+			<version>11.0.1</version>
+		</dependency>
+		<dependency>
+			<groupId>javafx</groupId>
+			<artifactId>rt</artifactId>
+			<version>2.0.2</version>
 		</dependency>
 		<dependency>
 			<groupId>com.soletta</groupId>
