--- a/beanprocessortest/pom.xml
+++ b/beanprocessortest/pom.xml
@@ -10,7 +10,7 @@
 		<dependency>
 			<groupId>com.soletta</groupId>
 			<artifactId>beanprocessor-test-beans</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
+			<version>${project.version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
